# Denglisch-code-switching-MT

./: README.md  pyproject.toml
data/: final_translation_data.csv
data_prep/: data_filtering.py  data_prep.py  data_preprocessing.py
finetuning/: finetune.py  finetune_mbart.py  finetune_mbart_all_experiments.py  finetune_mt5_baseline.py  train.py
model_evaluation/: mbart_evaluate.py  mt5_evaluate_baseline.py  test.py
results/mBART_hybrid_baseline/: train_metrics.json  val_metrics.json
results/mBART_hybrid_lang/: train_metrics.json  val_metrics.json
results/mBART_hybrid_lang+pos/: train_metrics.json  val_metrics.json
results/mBART_hybrid_pos/: train_metrics.json  val_metrics.json
results/mBART_ratio_baseline/: train_metrics.json  val_metrics.json
results/mBART_ratio_lang/: train_metrics.json  val_metrics.json
results/mBART_ratio_pos/: train_metrics.json  val_metrics.json
results/mBART_threshold_baseline/: train_metrics.json  val_metrics.json
results/mBART_threshold_lang/: train_metrics.json  val_metrics.json
results/mBART_threshold_lang+pos/: train_metrics.json  val_metrics.json
results/mBART_threshold_pos/: train_metrics.json  val_metrics.json
results/mT5/: metrics.json  train_metrics.json
results/validation/: metrics.json
results_tuned/mBART_hybrid_baseline/: best_hyperparameters.json  train_metrics.json  val_metrics.json
results_tuned/mBART_hybrid_lang/: best_hyperparameters.json  train_metrics.json  val_metrics.json
results_tuned/mBART_hybrid_lang+pos/: best_hyperparameters.json  train_metrics.json  val_metrics.json
(+99 files in other folders)
